Bug 1619329 - Error propagation on main thread needs to be dispatched. r=dom-workers-and-storage-reviewers,sg

Differential Revision: https://phabricator.services.mozilla.com/D73249